<resources>
    <string name="app_name">TheFixer</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_payment">Payment</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account">Account</string>
    <string name="electric_icon">ElectricDescription</string>
    <string name="vehicle_icon">VehicleDescription</string>
    <string name="computer_icon">ComputerDescription</string>
    <string name="security_icon">SecurityDescription</string>
    <string name="plumber_icon">PlumberDescription</string>
    <string name="mobile_icon">MobileDescription</string>
    <string name="text_electronic">Electronic</string>
    <string name="text_vehicle">Vehicle</string>
    <string name="text_computer">Computer</string>
    <string name="text_security">Security</string>
    <string name="text_plumber">Plumber</string>
    <string name="text_mobile">Mobile</string>
    <string name="label_fixer_nearby">Best Fixer Nearby</string>
    <string name="map_api_key">AIzaSyAlfj4MNidu9Bn_HJykzu13-aIOtEaPZOA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Id Account</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup"><b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="label_best_deal_today">Best Deal Today</string>
    <string name="this_is_a_message">This is a Message</string>

    >>>>>>> origin
</resources>